# seiji-watch

./: .env.example  .env.staging  .env.template  .gitignore  .lighthouserc.json  CLAUDE.md  DEVELOPER_ONBOARDING.md  Dockerfile.test  Makefile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  SECURITY_FIXES.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  external-testing-guide.md  package-lock.json  package.json  pyproject.toml  release-test-report.md  test_airtable_connection.py  test_airtable_v2.py  test_issues.py
services/api-gateway/: .dockerignore  .env.example  .env.template  Dockerfile  README.md  SECURITY.md  cloudbuild.yaml  complete_api_server.py  pyproject.toml  pytest.ini  simple_airtable_test_api.py  simple_api.py  simple_bills_api_test.py  simple_category_server.py  simple_demo_server.py  simple_server.py  start_api.py  start_dev.py  start_worker.py  test_bills_api.py  test_bills_policy_category_api.py  test_bills_router.py  test_real_data_api.py  validate_bills_routes.py
services/api-gateway/docs/: api-response-standard.md
services/api-gateway/scripts/: start_worker.py
services/api-gateway/src/: __init__.py  airtable_cache.py  auth_middleware.py  env_validator.py  main.py  main_fixed.py  main_original.py  simple_main.py
services/api-gateway/src/batch/: __init__.py  issue_relationship_batch.py  member_tasks.py  task_queue.py
services/api-gateway/src/cache/: __init__.py  redis_client.py
services/api-gateway/src/middleware/: auth.py
services/api-gateway/src/monitoring/: logger.py  metrics.py
services/api-gateway/src/routes/: __init__.py  airtable_webhooks.py  batch_management.py  bills.py  enhanced_issues.py  enhanced_issues_fixed.py  issues.py  monitoring.py  speeches.py
services/api-gateway/src/security/: validation.py
services/api-gateway/src/services/: __init__.py  issue_service_client.py  llm_service.py  member_service.py  policy_analysis_service.py
services/api-gateway/src/utils/: error_handling.py  response_format.py  test_auth.py
services/api-gateway/tests/: __init__.py  conftest.py  test_auth.py  test_enhanced_issues_api.py  test_health.py  test_llm_service.py
services/api-gateway/tests/integration/: __init__.py  test_enhanced_issues_api.py
services/api-gateway/tests/unit/: __init__.py  test_airtable_integration.py  test_response_standardization.py  test_simple_api_endpoints.py
services/api-gateway/tests/utils/: __init__.py
services/diet-scraper/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/diet-scraper/src/scraper/: diet_scraper.py  enhanced_diet_scraper.py  enhanced_hr_scraper.py  hr_voting_scraper.py  resilience.py
services/diet-scraper/tests/: test_scraper.py
services/ingest-worker/: .dockerignore  BILLS_IMPROVEMENT_SUCCESS_REPORT.md  EPIC16_COMPLETION_REPORT.md  add_issue_fields.py  add_member_fields.py  add_more_shugiin_members.py  add_speech_fields.py  airtable_bills_integration.py  airtable_schema_Bills_法案_20250713_015324.json  airtable_schema_Members_議員_20250713_015326.json  airtable_schema_Parties_政党_20250713_015328.json  airtable_schema_Speeches_発言_20250713_015331.json  airtable_schema_inspector.py  analyze_bills_categories.py  analyze_bills_schema.py  analyze_duplicates.py  analyze_incomplete_kana.py  analyze_issue_categories.py  analyze_kana_accuracy.py  analyze_members_schema.py  analyze_members_table.py  authoritative_kana_backup_20250713_164607.json  authoritative_kana_fix_report_20250713_164722.json  authoritative_kana_fixer.py  batch_integration.py  bill_id_conversion_results_20250715_183051.json  bills_backup_before_repair_20250713_014417.json  bills_category_analysis_t129.json  bills_cleanup_remaining.py  bills_data_emergency_fix.py  bills_data_emergency_fix_v2.py  bills_detailed_analysis.py  bills_detailed_analysis_20250713_021828.json  bills_empty_fix_20250713_021920.json  bills_empty_records_fix.py  bills_improvement_batch2.py  bills_improvement_batch2_20250713_021719.json  bills_improvement_execution.py  bills_migration_result_20250713_003050.json  bills_mvp_collection_20250714_022926.json  (+166 more)
services/ingest-worker/docs/: hr_pdf_processing.md
services/ingest-worker/src/: main.py
services/ingest-worker/src/batch/: historical_ingestion.py  issue_relationship_batch.py
services/ingest-worker/src/batch_queue/: __init__.py  batch_processor.py
services/ingest-worker/src/collectors/: ndl_api_client.py
services/ingest-worker/src/embeddings/: __init__.py  vector_client.py
services/ingest-worker/src/migration/: data_completion_processor.py  data_migration_service.py  data_quality_auditor.py  migration_cli.py
services/ingest-worker/src/monitoring/: __init__.py  alerting.py  dashboard.py  data_quality_dashboard.py  error_recovery_system.py  logger.py  metrics.py  monitoring_alerting_system.py  monitoring_cli.py  monitoring_manager.py  monitoring_service.py
services/ingest-worker/src/pipeline/: __init__.py  data_processor.py  hr_data_integration.py  ingestion_router.py  (+2 more)
services/ingest-worker/tests/: conftest.py  test_airtable_issue_manager.py  test_data_integration.py  test_data_migration.py  test_enhanced_scraping.py  test_history_recording.py  test_integration_workflow.py  test_monitoring_system.py  test_policy_issue_extractor.py  test_search_functionality.py
services/notifications-worker/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/notifications-worker/tests/: test_notifications.py
services/stt-worker/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/stt-worker/tests/: test_worker.py
services/vector-store/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
services/vector-store/tests/: test_store.py
shared/: alembic.ini  pyproject.toml  pytest.ini
shared/alembic/: env.py
shared/alembic/versions/: 0001_initial_migration.py  0002_add_bills_issue_categories_table.py  0003_enhance_bills_detailed_fields.py  0004_create_bill_process_history_table.py
shared/src/shared/: __init__.py
shared/tests/: __init__.py
(+440 files in other folders)
