[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared data models and utilities"
authors = ["Diet Issue Tracker Team"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
aiohttp = "^3.9.0"
weaviate-client = "^3.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"